# mealmeter

./: .env.example  .gitignore  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py  schemas.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  config.js  main.js
terraform/: .gitignore  .terraform.lock.hcl  README.md  dynamodb.tf  main.tf  outputs.tf  s3_cloudfront.tf  terraform.tfvars.example  variables.tf
